hil/static/css/style.css
/*----- CLASS SPECIFICS -----*/
.container-spaced-medium {
    margin-top: 30px;
}

.container-spaced-large {
    margin-top: 80px;
}

.bg-transparent-90 {
    background: rgba(0, 0, 0, 0.9) !important;
}

.bg-transparent-78 {
    background: rgba(0, 0, 0, 0.78) !important;
}

.table-medium {
    max-height: 75vh;
    margin: 0;
    overflow: auto;
}

.table-large {
    max-height: 80vh;
    margin: 0;
    overflow: auto;
}

.table {
    margin: 0;
}

.form-medium {
    padding: 9px 15px;
    border-radius: 5px;
}

.btn-medium {
    margin-top: 10px;
    width: 100px;
}

.width-medium {
    width: 37vw;
}

/*----- ADJUSTMENTS -----*/
.alert-fixed {
    position: fixed;
    top: 56px;
    left: 0;
    width: 100%;
    z-index: 9999;
    border-radius: 0;
}

td.spaced {
    padding-right: 10px;
}

.header-adjust {
    margin-top: 10px;
    padding-left: 13px;
}

.navbar {
    padding-left: 1vw;
    padding-right: 1vw;
}

.code-frame {
    background-color: rgba(255, 255, 255, 0.14);
    margin: 5px -5px;
    padding: 15px;
}

/*----- LINK -----*/
.link-margin-large {
    margin-top: 10px;
}

a.link-aptiv {
    color: #f84018 !important;
}

a.link-aptiv:hover, a.link-aptiv:active {
    color: #d23a18 !important;
}

a.link-white {
    color: #fff;
}

a.link-white:hover, a.link-white:active {
    color: #cdcdcd;
}

/*----- TEXT -----*/
.text-shadow {
    text-shadow: 2px 2px rgba(108, 117, 125, 0.8);
}

.text-limit {
    word-wrap: break-word;
    max-width: 400px;
}

/*----- GENERAL -----*/
html, body {
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
}

body {
    padding-top: 70px;
    background-color: #3d3427 !important;
    background-image: url("/static/img/slider/data.jpg");
    background-position: bottom;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

